fixed gradient and event images not covering the card background

--- a/resources/views/event/display_includes/event.scss
+++ b/resources/views/event/display_includes/event.scss
@@ -1,5 +1,5 @@
-$event-gradient: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.5)) !default;
-$event-hover-gradient: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3)) !default;
+$event-gradient: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.8)) !default;
+$event-hover-gradient: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)) !default;
 $event-bg: #eee !default;
 $event-hover-bg: #aaa !default;
 
