--- a/resources/views/website/layouts/macros/card-bg-image.scss
+++ b/resources/views/website/layouts/macros/card-bg-image.scss
@@ -1,8 +1,8 @@
 $photo_pop-color: #fff !default;
 $photo-color: #222 !default;
 $photo-hover-color: #222 !default;
-$photo-hover-gradient: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3)) !default;
-$photo-gradient: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.5)) !default;
+$photo-gradient: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.7)) !default;
+$photo-hover-gradient: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.6)) !default;
 
 .photo_pop {
   color: $photo_pop-color;
